--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "dotenv": "^16.0.3",
         "dotenv-webpack": "^8.0.1",
         "moment": "^2.29.4",
+        "pinia": "^2.1.7",
         "postcss": "^8.4.23",
         "postcss-loader": "^7.3",
         "tailwindcss": "^3.4",
