--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "@mdi/font": "^7.2.96",
+        "animate.css": "^4.1.1",
         "autoprefixer": "^10.4.14",
         "axios": "^1.4.0",
         "dotenv": "^16.0.3",
